chore: Update @fortawesome/fontawesome-free 4.5.1 => 5.1.5, @jaames/iro 4.5.1 => 5.1.5, react 16.8.6 => 16.13.0, react-dom 16.8.6 => 16.13.0, react-router 5.0.1 => 5.1.2, react-router-dom 5.0.1 => 5.1.2.

--- a/myreader-frontend/src/app/js/components/Chips/Chip.css
+++ b/myreader-frontend/src/app/js/components/Chips/Chip.css
@@ -34,7 +34,7 @@
     color: rgba(0, 0, 0, 0.24);
 }
 
-.my-chip__remove-button {
+.my-icon-button.my-chip__remove-button {
     border: 0;
     padding: 0;
     margin: 0;
