fix: various bugs in entry stream page after migration to hooks. replace custom debounce and hotkeys function with a better third party implementation.

--- a/myreader-frontend/src/app/css/mobile.css
+++ b/myreader-frontend/src/app/css/mobile.css
@@ -43,6 +43,18 @@ input {
     width: 100%;
 }
 
+@media (max-width: 599px) {
+    .hidden-phone {
+        display: none;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 1279px) {
+    .hidden-tablet {
+        display: none;
+    }
+}
+
 /*
  Reference: https://tailwindcss.com/docs
  */
@@ -52,10 +64,6 @@ input {
 
 .flex-col {
     flex-direction: column;
-}
-
-.flex-grow {
-    flex-grow: 1;
 }
 
 .w-full {
