--- a/myreader-frontend/src/app/js/components/SearchInput/SearchInput.css
+++ b/myreader-frontend/src/app/js/components/SearchInput/SearchInput.css
@@ -1,15 +1,20 @@
 .my-search-input {
-    align-items: center;
-    display: flex;
-    flex-grow: 1;
+  align-items: center;
+  display: flex;
+  flex-grow: 1;
 }
 
 .my-search-input > svg {
-    color: grey;
-    margin-right: 5px;
+  color: grey;
+  margin-right: 5px;
 }
 
 .my-search-input__input {
-    flex-grow: 1;
-    margin: 0;
+  flex-grow: 1;
+  margin: 0;
+}
+
+.my-search-input__input--inverse > input,
+.my-search-input__input--inverse > input:focus {
+  border-color: #FFFFFF;
 }
