--- a/myreader-frontend/src/app/js/components/SidenavLayout/SidenavLayout.css
+++ b/myreader-frontend/src/app/js/components/SidenavLayout/SidenavLayout.css
@@ -1,53 +1,60 @@
 .my-sidenav-layout {
-    display: grid;
-    width: 100%;
-    grid-template-columns: 320px 1fr;
-    grid-template-rows: 64px;
-    grid-template-areas:
-        "header main"
+  display: grid;
+  width: 100%;
+  grid-template-columns: 320px 1fr;
+  grid-template-rows: 64px;
+  grid-template-areas:
+        "header header"
         "nav    main";
 }
 
 @media (max-width: 1279px) {
-    .my-sidenav-layout {
-        grid-template-areas:
+  .my-sidenav-layout {
+    grid-template-areas:
             "header header"
             "nav    main";
-        grid-template-columns: 0 1fr;
-    }
+    grid-template-columns: 0 1fr;
+  }
 }
 
 .my-sidenav-layout__main {
-    grid-area: main;
-    min-height: 0;
-    overflow: auto;
+  grid-area: main;
+  min-height: 0;
+  overflow: auto;
 }
 
 .my-sidenav-layout__header {
-    grid-area: header;
-    background-color: rgb(63, 81, 181);
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
-    z-index: 20;
-    display: flex;
-    align-items: center;
+  grid-area: header;
+  background-color: rgb(63, 81, 181);
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+  z-index: 20;
+  display: flex;
+  align-items: center;
 }
 
 .my-sidenav-layout__nav {
-    grid-area: nav;
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
-    background-color: white;
-    z-index: 30;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    width: 100%;
-    min-height: 0;
+  grid-area: nav;
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+  background-color: white;
+  z-index: 30;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  width: 100%;
+  min-height: 0;
 }
 
 .my-sidenav-layout__nav--animate {
-    transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 .my-sidenav-layout__nav--open {
-    width: 320px;
+  width: 320px;
+}
+
+#portal-header {
+  flex-grow: 1;
+  justify-content: flex-end;
+  display: flex;
+  padding: 10px;
 }
