--- a/myreader-frontend/src/app/js/components/SubscriptionEditForm/SubscriptionEditForm.css
+++ b/myreader-frontend/src/app/js/components/SubscriptionEditForm/SubscriptionEditForm.css
@@ -1,27 +1,30 @@
-.my-subscription-edit-form {
-    padding: 10px;
+.my-subscription-edit-form,
+.my-subscription-edit-form__fetch-error-title,
+.my-subscription-fetch-errors {
+  padding: 10px;
 }
 
 .my-subscription-edit-form__origin {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .my-subscription-edit-form__origin > .my-input {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .my-subscription-edit-form__origin > a {
-    color: grey;
+  color: grey;
 }
 
 .my-subscription-edit-form__pattern-title {
-    font-size: 20px;
-    font-weight: 500;
-    letter-spacing: 0.005em;
-    user-select: none;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0.005em;
+  user-select: none;
 }
 
 .my-subscription-edit-form__buttons {
-    float: right;
+  display: flex;
+  justify-content: flex-end;
 }
