--- a/myreader-frontend/src/app/js/components/SidenavLayout/SidenavLayout.css
+++ b/myreader-frontend/src/app/js/components/SidenavLayout/SidenavLayout.css
@@ -23,6 +23,12 @@
   overflow: auto;
 }
 
+.my-sidenav-layout__main > * {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .my-sidenav-layout__header {
   grid-area: header;
   background-color: rgb(63, 81, 181);
