--- a/myreader-frontend/src/app/js/components/Buttons/Button/Button.css
+++ b/myreader-frontend/src/app/js/components/Buttons/Button/Button.css
@@ -14,7 +14,7 @@
     padding: 0 6px;
     margin: 6px 8px;
     background: transparent;
-    color: currentColor;
+    color: rgba(0, 0, 0, 0.87);
     white-space: nowrap;
     text-transform: uppercase;
     font-weight: 500;
