--- a/myreader-frontend/src/app/js/components/SearchInput/SearchInput.css
+++ b/myreader-frontend/src/app/js/components/SearchInput/SearchInput.css
@@ -17,4 +17,5 @@
 .my-search-input__input--inverse > input,
 .my-search-input__input--inverse > input:focus {
   border-color: #FFFFFF;
+  color: #FFFFFF;
 }
