refactor: relocate commit id and build time to login page

--- a/myreader-frontend/src/app/js/pages/SettingsPage/SettingsPage.css
+++ b/myreader-frontend/src/app/js/pages/SettingsPage/SettingsPage.css
@@ -7,3 +7,7 @@
 .my-settings > .my-settings__item + .my-settings__item {
     padding-top: 25px;
 }
+
+.my-settings__item + table {
+  padding-top: 20px;
+}
