--- a/myreader-frontend/src/app/js/pages/SubscriptionPage/SubscriptionEditForm/SubscriptionFetchErrors/SubscriptionFetchErrors.css
+++ b/myreader-frontend/src/app/js/pages/SubscriptionPage/SubscriptionEditForm/SubscriptionFetchErrors/SubscriptionFetchErrors.css
@@ -3,12 +3,12 @@
     flex-direction: column;
 }
 
-.my-subscription-fetch-errors__item {
+.my-subscription-fetch-errors > div {
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
     padding: 11px 0;
 }
 
-.my-subscription-fetch-errors__item > span {
+.my-subscription-fetch-errors > div > span {
     color: rgba(0, 0, 0, 0.54);
     display: block;
     font-size: 14px;
@@ -16,8 +16,4 @@
     letter-spacing: 0.01em;
     line-height: 1.6em;
     margin: 0;
-}
-
-.my-subscription-fetch-errors__load-more > span {
-    width: 100%;
 }
