--- a/myreader-frontend/src/app/js/components/Chips/Chips.css
+++ b/myreader-frontend/src/app/js/components/Chips/Chips.css
@@ -2,3 +2,36 @@
     display: flex;
     flex-direction: column;
 }
+
+.my-chip {
+  border-radius: 16px;
+  display: flex;
+  height: 32px;
+  line-height: 32px;
+  margin: 4px;
+  padding: 0 12px;
+  float: left;
+  background: rgb(224, 224, 224);
+  user-select: none;
+}
+
+.my-chip * {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.my-chip[aria-disabled="true"] {
+  color: rgba(0, 0, 0, 0.24);
+  cursor: default;
+}
+
+.my-chip[aria-disabled="true"] .my-icon {
+  color: rgba(0, 0, 0, 0.24);
+}
+
+.my-icon-button.my-chip__remove-button {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+}
