--- a/myreader-frontend/src/app/js/components/Chips/Chips.css
+++ b/myreader-frontend/src/app/js/components/Chips/Chips.css
@@ -1,10 +1,11 @@
 .my-chips {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .my-chip {
   border-radius: 16px;
+  color: rgba(0, 0, 0, 0.87);
   display: flex;
   height: 32px;
   line-height: 32px;
