--- a/myreader-frontend/src/app/js/components/Dialog/Dialog.css
+++ b/myreader-frontend/src/app/js/components/Dialog/Dialog.css
@@ -25,3 +25,9 @@ dialog {
 .my-dialog__close-button {
   margin-left: auto;
 }
+
+@media (prefers-color-scheme: dark) {
+  .my-dialog {
+    background-color: rgb(85, 85, 85);
+  }
+}
