--- a/myreader-frontend/src/app/js/pages/SubscriptionListPage/SubscriptionListPage.css
+++ b/myreader-frontend/src/app/js/pages/SubscriptionListPage/SubscriptionListPage.css
@@ -3,6 +3,8 @@
 }
 
 .my-subscription-list-page__item {
+  display: flex;
+  flex-direction: column;
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   cursor: pointer;
   padding: 16px 0;
@@ -13,6 +15,7 @@
   letter-spacing: 0.01em;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-decoration: none;
 }
 
 .my-subscription-list-page__item > span {
@@ -24,9 +27,19 @@
   margin: 0;
 }
 
-
 .my-subscription-list-search-input {
   margin-left: auto;
   margin-right: auto;
   max-width: 400px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .my-subscription-list-page__item {
+    border-bottom: 1px solid rgb(186, 186, 185);
+  }
+
+  .my-subscription-list-page__item-heading,
+  .my-subscription-list-page__item > span {
+    color: rgb(186, 186, 185);
+  }
 }
