--- a/myreader-frontend/src/app/js/components/Input/Input.css
+++ b/myreader-frontend/src/app/js/components/Input/Input.css
@@ -53,3 +53,24 @@
     display: block;
     padding-top: 5px;
 }
+
+@media (prefers-color-scheme: dark) {
+  .my-input > label,
+  .my-input > input:disabled,
+  .my-input > input:disabled {
+    color: rgba(215, 203, 203, 0.54);
+    border-color: rgba(215, 203, 203, 0.54);
+  }
+
+  .my-input > input {
+    border-color: rgb(217, 217, 217);
+  }
+
+  .my-input > input:focus {
+    border-color: rgb(217, 217, 217);
+  }
+
+  .my-input.my-input--error > .my-input__validations > span {
+    color: var(--error-color);
+  }
+}
