--- a/myreader-frontend/src/app/js/components/Navigation/SettingsNavigationItem/SettingsNavigationItem.css
+++ b/myreader-frontend/src/app/js/components/Navigation/SettingsNavigationItem/SettingsNavigationItem.css
@@ -5,7 +5,7 @@
   padding: 10px;
 }
 
-.my-settings__item  {
+.my-settings__item {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -26,9 +26,11 @@
   position: relative;
   display: inline-block;
 }
+
 .my-settings__switch-input {
   display: none;
 }
+
 .my-settings__switch-label {
   display: block;
   width: 48px;
@@ -38,6 +40,7 @@
   color: transparent;
   user-select: none;
 }
+
 .my-settings__switch-label::before,
 .my-settings__switch-label::after {
   content: "";
@@ -45,6 +48,7 @@
   position: absolute;
   cursor: pointer;
 }
+
 .my-settings__switch-label::before {
   width: 100%;
   height: 100%;
@@ -53,6 +57,7 @@
   -webkit-transition: background-color 0.25s ease;
   transition: background-color 0.25s ease;
 }
+
 .my-settings__switch-label::after {
   top: 0;
   left: 0;
@@ -64,9 +69,17 @@
   -webkit-transition: left 0.25s ease;
   transition: left 0.25s ease;
 }
+
 .my-settings__switch-input:checked + .my-settings__switch-label::before {
   background-color: rgb(63, 81, 181);
 }
+
 .my-settings__switch-input:checked + .my-settings__switch-label::after {
   left: 24px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .my-settings__switch-input:checked + .my-settings__switch-label::before {
+    background-color: rgb(55, 89, 128);
+  }
 }
