--- a/myreader-frontend/src/app/js/pages/EntryStreamPage/EntryList/EntryList.css
+++ b/myreader-frontend/src/app/js/pages/EntryStreamPage/EntryList/EntryList.css
@@ -1,14 +1,20 @@
 .my-entry-list {
-    display: flex;
-    flex-direction: column;
-    padding: 0 16px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 16px;
 }
 
 .my-entry-list__item {
-    margin: 0 -16px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  margin: 0 -16px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .my-button__load-more {
-    width: 100%;
+  width: 100%;
+}
+
+@media (prefers-color-scheme: dark) {
+  .my-entry-list__item {
+    border-bottom: 1px solid rgb(186, 186, 185);
+  }
 }
