--- a/myreader-frontend/src/app/js/pages/SubscriptionPage/SubscriptionEditForm/SubscriptionEditForm.css
+++ b/myreader-frontend/src/app/js/pages/SubscriptionPage/SubscriptionEditForm/SubscriptionEditForm.css
@@ -36,3 +36,9 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   cursor: pointer;
 }
+
+@media (prefers-color-scheme: dark) {
+  .my-subscription-edit-form__color:hover {
+    background-color: rgba(255, 255, 255);
+  }
+}
