--- a/myreader-frontend/src/app/js/pages/SubscriptionPage/SubscriptionEditForm/SubscriptionEditForm.css
+++ b/myreader-frontend/src/app/js/pages/SubscriptionPage/SubscriptionEditForm/SubscriptionEditForm.css
@@ -37,6 +37,11 @@
   cursor: pointer;
 }
 
+.my-subscription-edit-form__color-dialog {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media (prefers-color-scheme: dark) {
   .my-subscription-edit-form__color:hover {
     background-color: rgba(255, 255, 255);
