refactor: remove array copy and simplify render logic in entry list

--- a/myreader-frontend/src/app/js/components/ListLayout/ListLayout.css
+++ b/myreader-frontend/src/app/js/components/ListLayout/ListLayout.css
@@ -3,6 +3,11 @@
   flex-direction: column;
 }
 
+.my-list-layout__list-content {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (min-width: 1280px) {
   .my-list-layout__list-panel {
     height: 100%;
