refactor: inline fontawesome icons inside icon component

--- a/myreader-frontend/src/app/js/components/Icon/Icon.css
+++ b/myreader-frontend/src/app/js/components/Icon/Icon.css
@@ -1,84 +1,7 @@
 .my-icon {
-  --color: #808080;
-  --height: 1em;
-  --width: 1em;
-
   display: inline-block;
-  height: var(--height);
+  height: 1em;
   margin: 0 2px;
   vertical-align: -2px;
-  width: var(--width);
-}
-
-.my-icon.my-icon__chevron-left {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/chevron-left.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__chevron-right {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/chevron-right.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__chevron-down {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/chevron-down.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__chevron-up {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/chevron-up.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__check {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/check.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__check-circle {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/check-circle.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__redo {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/redo.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-  content: ' ';
-}
-
-.my-icon.my-icon__search {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/search.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__times {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/times.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__bars {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/bars.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__link {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/link.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
-}
-
-.my-icon.my-icon__exclamation-triangle {
-  mask: url('../../../../../node_modules/@fortawesome/fontawesome-free/svgs/solid/exclamation-triangle.svg') no-repeat center;
-  mask-size: contain;
-  background-color: var(--color);
+  width: 1em;
 }
